--- a/css/global.css
+++ b/css/global.css
@@ -24,14 +24,14 @@
 
 
 h1 {
-    font-size: 1.2em;
+    font-size: 2em;
     font-weight: 200;
     color: var(--grey-400);
 }
 
 h2 {
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 600;
     color: var(--grey-500);
 }
 
@@ -64,8 +64,6 @@ body {
     align-items: center;
     justify-content: flex-start;
     margin: 0.5rem;
-
-
 }
 
 .header {
@@ -75,14 +73,44 @@ body {
     justify-content: flex-start;
     gap: 1rem;
     padding: 1rem;
-    margin: 1rem 0;
+    margin: 1rem;
+}
+.card   
+{   
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
+    background-color: var(--white);
+    border-radius: 0.5rem;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    padding: 1.5rem;
+    height: auto;
 }
 
-footer img
-{
-    width: 35px;
+.card section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
 }
 
+.card p {
+    align-self: flex-start;
+}
 
+.red {
+    border-top: solid 0.3rem var(--red);
 
+}
+.cyan {
+    border-top: solid 0.3rem var(--cyan);
+
+}
+.orange {
+    border-top: solid 0.3rem var(--orange);
+}
+.blue {
+    border-top: solid 0.3rem var(--blue);
+}
 
