--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,4 +1,8 @@
 
+body {
+    margin-top: 2rem;
+}
+
 .card-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -13,15 +17,6 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 1rem;
-}
-
-
-
-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin: 2rem 0 0 0;
 }
 
 .red {
