--- a/css/global.css
+++ b/css/global.css
@@ -62,8 +62,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    margin: 0.5rem;
+    justify-content: space-evenly;
 }
 
 .header {
@@ -99,6 +98,12 @@ body {
     align-self: flex-start;
 }
 
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin: 2rem 0 0 0;
+}
 .red {
     border-top: solid 0.3rem var(--red);
 
